--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -1601,7 +1601,7 @@
   { \err_help_return_or_X: } { }
 \keys_err_new:nNnnn { unknown_choice } 2
   { Choice~`#2'~unknown~for~key~`#1':~\iow_newline:~\text_put_sp:~
-   \text_put_sp:~the~value~give~is~being~ignored }
+   \text_put_sp:~the~key~is~being~ignored }
   { \err_help_return_or_X: } { }
 \err_file_close:N \c_keys_err_tlp
 %    \end{macrocode}
